# sudoku-solver

./: .gitignore  CMakeLists.txt  README.md  puzzle.py  solve_puzzle.py  train_classifier.py
client/web/: .gitignore  Cargo.toml  README.md  index.html  package.json  postcss.config.js
client/web/src/: main.rs
digit_classifier/: digit_classifier.ipynb  pytorch_digit_classifier.ipynb  train.py
digit_classifier/.ipynb_checkpoints/: digit_classifier-checkpoint.ipynb
digit_classifier/dataset/: renamer.py
digit_classifier/loader/: digit_dataset_loader.py
digit_classifier/models/: converted_model.pt  model.pth  optimizer.pth  sudoku_net.py
digit_classifier/networks/: sudoku_net.py
digit_classifier/output/: dc.h5  model.h5
digit_classifier/scripts/: convert_to_tensorflow.py
digit_classifier/utils/: show_graph.py
digit_recognizer/: puzzle.py
digit_recognizer/include/recognizer/: Inference.h  Recognizer.h  inference.h
digit_recognizer/src/: Recognizer.cpp  inference.cpp  recognizer.cpp
image_extractor/: puzzle.py
include/sudoku/: Metadata.h  Sudoku.h  Variables.h
scripts/: opencv_build_from_source_linux_x86_64.sh
solver/: CMakeLists.txt
solver/include/ocr/: Recognizer.h
solver/include/solver/: sudoku.h  variables.h
solver/include/sudoku/: Sudoku.h  Variables.h
solver/src/: Recognizer.cpp  Sudoku.cpp  Variables.cpp  main.cpp  sudoku.cpp  variables.cpp
solver/test/: SudokuTest.cpp  sudoku_test.cpp
src/: Metadata.cpp  Sudoku.cpp  main.cpp
test/: SudokuTest.cpp
